== MediaWiki 1.31.4 ==

THIS IS NOT A RELEASE YET

=== Changes since MediaWiki 1.32.3 ===

== MediaWiki 1.32.3 ==

This is a maintenance release of the MediaWiki 1.32 branch.

=== Changes since MediaWiki 1.32.2 ===
* (T225558) Update installer link to PHP intl.
* (T225496) Detect APC for MainCacheType in CLI installer.
* (T226766) Remove jetbrains/phpstorm-stubs from composer dev dependancies.
* (T202211) Fix SQLite patch-(image|page|template)links-fix-pk.sql column order.
* (T207100) Updated LanguageTr for dotted and dotless I in PHP 7.3.

== MediaWiki 1.32.2 ==

This is a security and maintenance release of the MediaWiki 1.32 branch.

=== Changes since MediaWiki 1.32.1 ===
* (T204423) Backport support for hyphenated DB names in JobQueueGroup.
* (T216968) Return pageid as int in both list=iwbacklinks and
  list=langbacklinks.
* (T215169) Fix for Database::update() with IGNORE option fails on PostgreSQL.
* (T199474) Fix typo in rebuildrecentchanges.php resulting in rogue flags.
* (T218608) SECURITY: Fix an issue that prevents Extension:OAuth working when
  $wgBlockDisablesLogin is true.
* (T216029) Chrome redirects to Special:BadTitle after editing a section with
  a non-Latin name on a page with non-Latin characters in title.
* Unbreak language related maintenance scripts that use StaticArrayWriter.
* (T219728) Added support for new Japanese era name "Reiwa".
* (T25227) SECURITY: action=logout now requires to be posted and have a csrf
  token.
* Updated cssjanus/cssjanus from 1.2.0 to 1.3.0.
* (T221045) Remove orphaned code from ConfigRepository.
* (T222385) resourceloader: Use AND instead of OR for upsert conds in
  saveFileDependencies().
* (T224374) Fix message parameters so that the message that says SQLite is
  out of date makes sense.
* (T200471) Prevent LBFactorySimple breaking ExternalStorage, when trying to
  connect to external server with local database name.
* (T197279) SECURITY: Fix reauth in Special:ChangeEmail.